test/corpus/binding.txt
===
Simple binding
===
name: jake
---
(source_file (binding
	id: (word)
	value: (word)))

===
Bound to a literal
===
until: :upto
---
(source_file (binding
	id: (word)
	value: (literal)))

===
Non-literal id
===
(birthday; fox; tomorrow): purchased
---
(source_file (binding
	id: (group (word) (word) (word))
	value: (word)))

===
No-space binding
===
a::b
---
(source_file (binding
	id: (word)
	value: (word)))

===
^- & call
===
f a::b c
---
(source_file (call
	fn: (word)
	input: (group (binding id: (word) value: (word)) (word))))

===
^- & dot-pipe
===
a.x::b.y
---
(source_file (binding
	id: (pipe (word) (word))
	value: (pipe (word) (word))))
